# EduRoutine

./: AGENTS.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_identity_schema.py  0002_academic_schema.py  0003_timetable_periods.py  0004_resources_rooms.py  0005_people.py  0006_password_reset_tokens.py  588d7e6540d2_add_routines_and_routine_details_tables.py
backend/scripts/: seed.py
backend/src/: __init__.py  main.py
backend/src/application/: __init__.py
backend/src/application/academic/: __init__.py  dto.py  service.py
backend/src/application/auth/: __init__.py  seed.py
backend/src/application/common/: __init__.py  cqrs.py
backend/src/application/data/: seed.py
backend/src/application/people/: __init__.py  dto.py  service.py
backend/src/application/resources/: __init__.py  dto.py  service.py
backend/src/application/roles/: __init__.py  dto.py  service.py
backend/src/application/timetable/: __init__.py  dto.py  service.py
backend/src/application/users/: __init__.py  dto.py  service.py
backend/src/domain/: __init__.py
backend/src/domain/academic/: __init__.py  exceptions.py
backend/src/domain/common/: __init__.py  domain_event.py  entity.py  exceptions.py  repository.py  value_object.py
backend/src/domain/identity/: __init__.py  exceptions.py
backend/src/domain/people/: __init__.py  exceptions.py
backend/src/domain/resources/: __init__.py  exceptions.py
backend/src/domain/timetable/: __init__.py  exceptions.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/auth/: __init__.py  jwt_service.py  (+3 more)
backend/src/presentation/: __init__.py
backend/src/shared/: __init__.py
backend/tests/: conftest.py
backend/tests/unit/: test_academic.py  test_auth_and_authz.py  test_envelope.py  test_health.py  test_periods.py
(+257 files in other folders)
