[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduroutine-backend"
version = "0.1.0"
description = "EduRoutine — Academic timetable management API (FastAPI, Clean Architecture)"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "passlib[argon2]>=1.7",
    "pyjwt[crypto]>=2.10",
    "redis>=5.2",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "coverage>=7.6",
    "bandit>=1.7",
    "asgi-lifespan>=2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ----------------------------------------------------------------------------
# Tooling — per docs/11-coding-standards.md
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C4", "SIM", "RUF"]
# S101 (assert) is fine in tests; handled per-file below.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# SQLAlchemy declarative config attr (`__table_args__`) is a framework-required dict.
"src/infrastructure/persistence/models/*" = ["RUF012"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["src"]
branch = true
